[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "set_bench"
harness = false

[[bench]]
name = "get_bench"
harness = false

[dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
protocol = { path = "../protocol" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
tempfile = "3.23.0"
